# VSServerMirror

./: .gitignore  Cargo.toml  Dockerfile  README.md  nginx.conf
src/: main.rs
